# metadata-fetcher

./: .gitignore  README.md  deno.json  deploy.bat  index.html  main.js  main.test.js  package.json  run.bat  server.js  tray.js  tsconfig.json  tsconfig.node.json  vite.config.ts
assets/: dep-qrcode-D__jcZ54.js  dep-qrcode-RZ3D7WOC.js  dep-qrcode-ZJnthmtn.js  dep-scannable-tV8BvxrW.js  dep-temporal-CVcaZAr0.js  dep-temporal-Do2ni_Vo.js  dep-temporal-XAyPyIO-.js  dep-vue-7Ki-Tw9b.js  dep-vue-FI_ZZqxO.js  index-APqrnyqn.js  index-BuFWkUGE.js  index-ByCdmZeZ.js  index-C1GsC0R3.js  index-CI7pPHfG.js  index-CU6uiCml.js  index-pzN1K4_r.js  index-ukMlTIrV.js  style-BXXVu4FJ.css  style-Bw53tJVQ.css  style-CKTqbAJ-.css  style-Drlxi5gV.css  style-DwKUwmuD.css  style-TT2BQzJB.css  style-admA4Euo.css
crates/convert-svg/: Cargo.toml
crates/reg-utils/: Cargo.toml
koishi-plugin/: README.md  package.json
lib/: convert-svg.py  deploy.js  info.js  info.ts  main.js  main.test.js  main.ts  preload.bun.ts  preload.node.ts  server.js  server.ts  tray.js  tray.ts
src/: bind.ts  cache.ts  config.ts  index.html  init.ts  main.css  main.koishi.ts  main.ssr.ts  main.ts  plugin.ts  render.ts  vite-env.d.ts
src/components/: app.vue.ts  bbdown.ts  bili.vue.ts  bilibili.vue.ts  config.vue.ts  dialog.ts  qrcode.ts  scannable.vue.ts
src/meta-fetch/: cache.ts  discover.ts  fetch.ts  mod.ts  plugin.ts  router.test.js  router.ts
src/plugins/: bili.ts  lyric.ts  nico.ts  others.ts  pixiv.ts  tube.ts  vsqx.ts  ~others.ts
tray/: Cargo.toml
tray/src/: console.zig  lib.rs  system_tray.rs
(+12 files in other folders)
