[package]
name = "tray"
version = "0.1.0"
edition = "2021"

[lib]
name = "tray"
crate-type = ["cdylib"]

[dependencies]
nwg = {version = "^1.0.13", package = "native-windows-gui"}
nwd = {version = "^1.0.5", package = "native-windows-derive"}
winapi = { version = "^0.3", features = ["wincon", "winuser"] }